Fixed accessibility issue with text contrast ratio

--- a/src/components/Technology/_Technology.scss
+++ b/src/components/Technology/_Technology.scss
@@ -56,7 +56,7 @@
     justify-content: center;
     align-items: center;
     font-family: 'Montserrat', sans-serif;
-    color: #999;
+    color: #a6a6a6;
     font-size: 0.8em;
   }
 }
